fix invalid dark mode background for highlighted code block

--- a/src/assets/highlightjs.css
+++ b/src/assets/highlightjs.css
@@ -11,7 +11,7 @@
 
 	.hljs {
 		color: #fff;
-		background: #1c1b1b;
+		background: #111827;
 	}
 
 	.hljs-subst {
